# xfardic

./: COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.in
data/: Makefile  Makefile.am  Makefile.in  xfardic.desktop.in
debian-xfardic/: changelog  control  copyright  files  rules  watch
docs/: xfardic-doxygen
docs/html/: about_8cpp-source.html  about_8cpp.html  about_8cpp__incl.dot  about_8cpp__incl.md5  about_8h-source.html  about_8h.html  about_8h__dep__incl.dot  about_8h__dep__incl.md5  about_8h__incl.dot  about_8h__incl.md5  annotated.html  classMyApp-members.html  classMyApp.html  classMyApp__coll__graph.dot  classMyApp__coll__graph.md5  classSelection-members.html  classSelection.html  classes.html  classxFarDicAbout-members.html  classxFarDicAbout.html  classxFarDicApp-members.html  classxFarDicApp.html  classxFarDicApp__coll__graph.dot  classxFarDicApp__coll__graph.md5  classxFarDicSettings-members.html  classxFarDicSettings.html  constants_8h-source.html  constants_8h.html  constants_8h__dep__incl.dot  constants_8h__dep__incl.md5  dir_1b1f3ed26d47292e5778d88d9ee551db.html  dir_1b1f3ed26d47292e5778d88d9ee551db_dep.dot  dir_6424c6b77164bf90f6f0783341592c48.html  dir_6424c6b77164bf90f6f0783341592c48_dep.dot  dir_d060a47801c09e546ca048ef7341b2ee.html  dir_d060a47801c09e546ca048ef7341b2ee_dep.dot  dirs.html  files.html  functions.html  functions_func.html  (+55 more)
doxygen/: xfardic-doxygen
locales/: README  xfardic.pot
locales/az_AZ/: Makefile  Makefile.am  Makefile.in  xfardic.po
locales/fa_IR/: Makefile  Makefile.in  xfardic.mo  xfardic.po
man/: Makefile  Makefile.am  Makefile.in  xfardic.1
pixmaps/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  about.cpp  about.h  constants.h  leitner.cpp  leitner.h  my_app.h  pronounce.cpp  pronounce.h  selection.cpp  selection.h  settings.cpp  settings.h  xfardic.cpp  xfardic.h  xfardic_app.cpp  xfardic_app.h
xfardic-src/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  configure  configure.in
xfardic-src/data/: Makefile  Makefile.in  xfardic.desktop
xfardic-src/locales/: README  xfardic.pot
xfardic-src/locales/az_AZ/: Makefile  Makefile.in  xfardic.mo  xfardic.po
xfardic-src/locales/fa_IR/: Makefile  Makefile.am  Makefile.in  xfardic.mo  xfardic.po
xfardic-src/man/: Makefile  Makefile.in  xfardic.1
xfardic-src/pixmaps/: Makefile  Makefile.am  Makefile.in
xfardic-src/src/: Makefile  Makefile.am  Makefile.in  about.cpp  about.h  constants.h  leitner.cpp  leitner.h  my_app.h  pronounce.cpp  pronounce.h  selection.cpp  selection.h  settings.cpp  settings.h  tts.cpp  tts.h  xfardic.cpp  xfardic.h  xfardic_app.cpp  xfardic_app.h
